<resources>
    <string name="app_name">Telcell Registration</string>
    <string name="balance_ame">Հաշվեկշիռ</string>
    <string name="balance_amount">00.00 </string>
    <string name="service_title">Ծառայություններ </string>
    <string name="see_all_services">Դիտել բոլորը </string>
    <string name="service_name">Վճարում </string>
    <string name="chosen_title_name">Ընտրված </string>
    <string name="description_name">Ավելացնել </string>
    <string name="history_title_name">Պատմություն </string>
    <string name="history_action_name">Քարտի համալրում </string>
    <string name="history_toAction_id_name">To card 431827**7831 </string>
    <string name="amount">+8000 AMD</string>
    <string name="approved">Հաստատված</string>
    <string name="special_offer_title">Հատուկ առաջարկներ</string>
    <string name="discount_info">Մեծ զեղչ</string>
    <string name="card_close_tv_title">Close the card</string>
    <string name="card_closing_reason">Please choose the option Why are you closing
your card?</string>
</resources>