<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent">

    <TextView
        android:id="@+id/servicesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:text="@string/chosen_title_name"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seeAllServicesTvView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:text="@string/see_all_services"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/servicesTitle" />

    <ImageView
        android:id="@+id/plusIconView"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/chosen_plus_button_background"
        android:padding="18dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/servicesTitle"
        app:layout_constraintTop_toBottomOf="@id/servicesTitle"
        app:srcCompat="@drawable/plus_icon"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/eyeIcon"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/chosen_plus_button_background"
        android:padding="18dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@id/plusIconView"
        app:layout_constraintTop_toTopOf="@id/plusIconView"
        app:srcCompat="@drawable/copy_icon"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/plusButtonDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description_name"
        android:textSize="@dimen/description_size"
        app:layout_constraintLeft_toLeftOf="@id/plusIconView"
        app:layout_constraintTop_toBottomOf="@id/plusIconView" />
</androidx.constraintlayout.widget.ConstraintLayout>